--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "boxicons": "^2.0.7",
     "next": "10.0.9",
+    "next-themes": "0.0.14",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
